Issue #3373294: Toolbar icons not visible in forced colors / high contrast mode

--- a/styles/components/toolbar.scss
+++ b/styles/components/toolbar.scss
@@ -109,6 +109,10 @@ body.gin--classic-toolbar {
         mask-repeat: no-repeat;
         mask-position: center center;
         mask-size: var(--gin-icon-size-toolbar) var(--gin-icon-size-toolbar);
+
+        @media (forced-colors: active) {
+          background: linktext !important;
+        }
       }
 
       &.toolbar-icon-default::before {
@@ -630,6 +634,10 @@ body.gin--classic-toolbar {
 
 .toolbar.toolbar-secondary .toolbar-bar .toolbar-tab > .toolbar-icon::before {
   background-color: var(--gin-icon-color);
+
+  @media (forced-colors: active) {
+    background: linktext !important;
+  }
 }
 
 .toolbar.toolbar-secondary .toolbar-bar .toolbar-tab > .toolbar-icon.toolbar-icon-edit.toolbar-item::before {
